2005-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.scm (flip-stock): Interpret a negative flip-limit as infinity.

	* rules/canfield.scm: Allow infinite redeals.

	* rules/klondike.scm: Allow infinite redeals in 3-card games.

2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: Change Dennis' patch once more and just use the game name
	for the title. This also eliminates the make_title function.

2005-06-03  Dennis Cranston <dennis_cranston@yahoo.com>

	* dialog.c (show_hint_dialog):  Remove dialog title and
	use bold for primary message string.
	
	* sol.c (make_title):  Change window title to match 
	HIG suggested format.
	
2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Remove obsolete UCB_CFLAGS.

2005-06-02  Richard Hoelscher  <rah@rahga.com>

	* rules/treize.scm (button-released): Fix a crasher and treat the
	waste as if it was a single slot when it contains only 2 cards.

2005-06-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* rules/seahaven.scm (droppable?): Add hilighting support for
	Seahaven.

	* sol.c (main_prog): Removed the default focus after too many
	complaints of "a cat on the keyboard ruined my solitaire game!".
	The use of any arrow key restores the focus to the toolbar.
	
2005-06-01  Richard Hoelscher  <rah@rahga.com>

	* rules, auld_lang_syne.scm, cover.scm, peek.scm, scuffle.scm, 
	spider.scm, spider_one_suit.scm, spider_two_suit.scm, straight_up.scm,
	quatorze.scm, ten_across.scm, thumb_and_pouch.scm, valentine.scm:
	Highlighting support.
	* TODO: We are using this file to track which games need highlighting.

	* canfield.scm, royal_east.scm, jumbo.scm, freecell.scm: Highlighting 
	amd a fix for Jumbo crasher (#304054) and Freecell doubleclicking
	(#171805) from Vincent Povirk <madewokherd@gmail.com>


2005-05-31  Richard Hoelscher  <rah@rahga.com>

	* sol.[ch]: 
	* cscmi.c:
	* menu.c: Switch from GnomeAppBar to GtkStatusBar, and use new