@@ -1,5 +1,8 @@
 2005-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+	* rules/klondike.scm: Patch from Vincent Povirk to auto-play cards
+	when the foundation is double-clicked. Finally closing bug #2845.
+
 	* sol.scm (flip-stock): Interpret a negative flip-limit as infinity.
 
 	* rules/canfield.scm: Allow infinite redeals.
